<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#0B0A0A"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="25dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/image1"
        android:layout_width="165dp"
        android:layout_height="93dp"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        android:layout_marginStart="128dp"

        android:layout_marginTop="7dp"
        android:layout_marginEnd="117dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/bwf" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image1"
        android:background="@color/black"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/player1"
                android:layout_width="126dp"
                android:layout_height="117dp"
                android:layout_marginStart="-200dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/player1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/badminton" />

            <ImageView
                android:id="@+id/player2"
                android:layout_width="126dp"
                android:layout_height="117dp"
                android:layout_marginStart="-100dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="-150dp"
                android:contentDescription="@string/player2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/player1"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/player" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:maxLines="1"
                android:text="@string/player1"
                android:textAlignment="center"
                android:textColor="#FBFAFA"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/player1"
                app:layout_constraintStart_toStartOf="@+id/player1"
                app:layout_constraintTop_toBottomOf="@+id/player1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:maxLines="1"
                android:text="@string/player2"
                android:textAlignment="center"
                android:textColor="#FBFAFA"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/player2"
                app:layout_constraintStart_toStartOf="@+id/player2"
                app:layout_constraintTop_toBottomOf="@+id/player2" />

            <Switch
                android:id="@+id/set1"
                android:layout_width="102dp"
                android:layout_height="51dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="250dp"
                android:layout_marginEnd="50dp"
                android:background="@color/grey"
                android:text="@string/set1"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/score11"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="15dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textView1"
                app:layout_constraintStart_toStartOf="@+id/textView1"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />

            <TextView
                android:id="@+id/score12"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="15dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/set11"
                android:layout_width="85dp"
                android:layout_height="51dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@color/peach"
                android:text="@string/plus1"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:backgroundTint="@color/peach"
                app:layout_constraintEnd_toEndOf="@+id/score11"
                app:layout_constraintStart_toStartOf="@+id/score11"
                app:layout_constraintTop_toBottomOf="@+id/score11" />

            <Button
                android:id="@+id/set12"
                android:layout_width="85dp"
                android:layout_height="51dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@color/blue"
                android:text="@string/plus2"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:backgroundTint="@color/blue"
                app:layout_constraintEnd_toEndOf="@+id/score12"
                app:layout_constraintStart_toStartOf="@+id/score12"
                app:layout_constraintTop_toBottomOf="@+id/score12" />

            <Switch
                android:id="@+id/set2"
                android:layout_width="102dp"
                android:layout_height="51dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="50dp"
                android:background="@color/grey"
                android:text="@string/set2"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/set1" />

            <TextView
                android:id="@+id/score21"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_marginTop="120dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/set11"
                app:layout_constraintStart_toStartOf="@+id/set11"
                app:layout_constraintTop_toBottomOf="@+id/set11" />

            <TextView
                android:id="@+id/score22"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_marginTop="120dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/set12"
                app:layout_constraintStart_toStartOf="@+id/set12"
                app:layout_constraintTop_toBottomOf="@+id/set12" />

            <Button
                android:id="@+id/set21"
                android:layout_width="85dp"
                android:layout_height="51dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@color/peach"
                android:text="@string/plus1"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:backgroundTint="@color/peach"
                app:layout_constraintEnd_toEndOf="@+id/score21"
                app:layout_constraintStart_toStartOf="@+id/score21"
                app:layout_constraintTop_toBottomOf="@+id/score21" />

            <Button
                android:id="@+id/set22"
                android:layout_width="85dp"
                android:layout_height="51dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@color/blue"
                android:text="@string/plus2"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:backgroundTint="@color/blue"
                app:layout_constraintEnd_toEndOf="@+id/score22"
                app:layout_constraintStart_toStartOf="@+id/score22"
                app:layout_constraintTop_toBottomOf="@+id/score22" />

            <Switch
                android:id="@+id/set3"
                android:layout_width="102dp"
                android:layout_height="51dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="50dp"
                android:background="@color/grey"
                android:text="@string/set3"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/set2" />

            <TextView
                android:id="@+id/score31"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_marginTop="120dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/set21"
                app:layout_constraintStart_toStartOf="@+id/set21"
                app:layout_constraintTop_toBottomOf="@+id/set21" />

            <TextView
                android:id="@+id/score32"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_marginTop="120dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/set22"
                app:layout_constraintStart_toStartOf="@+id/set22"
                app:layout_constraintTop_toBottomOf="@+id/set22" />

            <Button
                android:id="@+id/set31"
                android:layout_width="85dp"
                android:layout_height="51dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@color/peach"
                android:text="@string/plus1"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:backgroundTint="@color/peach"
                app:layout_constraintEnd_toEndOf="@+id/score31"
                app:layout_constraintStart_toStartOf="@+id/score31"
                app:layout_constraintTop_toBottomOf="@+id/score31" />

            <Button
                android:id="@+id/set32"
                android:layout_width="85dp"
                android:layout_height="51dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@color/blue"
                android:text="@string/plus2"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:backgroundTint="@color/blue"
                app:layout_constraintEnd_toEndOf="@+id/score32"
                app:layout_constraintStart_toStartOf="@+id/score32"
                app:layout_constraintTop_toBottomOf="@+id/score32" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>